Fixed popup image bug on iphone

--- a/resources/scss/popup.scss
+++ b/resources/scss/popup.scss
@@ -383,7 +383,7 @@
  .popup__img-body-icon{
   width: 100%;
   height: 100%;
-  background-image: url("../../public/img/popup/es/1_.webp");
+  background-image: url("https://colorit.artgas.pro/img/popup/es/1_.webp");
   background-repeat: no-repeat;
   background-size: cover;
   &.disabled{
@@ -410,7 +410,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: url("../../public/img/popup/es/2_.webp"),$purple;
+  background: url("https://colorit.artgas.pro/img/popup/es/2_.webp"),$purple;
   background-repeat: no-repeat;
   background-size: 105%;
   background-position: 0px 45px;
